--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Blur is a simple API for D&D spells",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "private": true,
   "author": "Angus Morton",
   "license": "Apache-2.0",
   "dependencies": {
