--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Angus Morton",
   "license": "Apache-2.0",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "swagger-tools": "^0.10.1",
+    "yamljs": "^0.2.8"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
